# dagsterPipeline

./: AQ.csv  README.md  pyproject.toml  setup.cfg  setup.py
DataPreprocessing/: Airquality-Preprocessing.ipynb  ChargingStationdataPreprocessing.ipynb
dagsterPipeline/: assets.py  definitions.py  read_mongo.ipynb
data/: Electric_Vehicle_Population_Size_History_By_County_20250411.csv  updated_AQ.json  updated_EV_Population.json
